# nanover-recording-converter

./: README.md
nanover-recording-converter/: pyproject.toml
nanover-recording-converter/src/nanover/grpc/: convert.py  convert_cli.py  frame_data.py  utilities.py
nanover-recording-converter/src/nanover/grpc/protocol/: array_pb2.py  array_pb2_grpc.py
nanover-recording-converter/src/nanover/grpc/protocol/state/: state_service_pb2.py  state_service_pb2_grpc.py
nanover-recording-converter/src/nanover/grpc/protocol/trajectory/: trajectory_service_pb2.py  trajectory_service_pb2_grpc.py
nanover-recording-converter/src/nanover_recording_converter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
nanover-recording-converter/src/nanover_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
protocol/nanover/grpc/protocol/: array.proto
protocol/nanover/grpc/protocol/state/: state_service.proto
protocol/nanover/grpc/protocol/trajectory/: trajectory_service.proto
