[project]
name = "nanover-recording-converter"
authors = [
    {name = "Intangible Realities Lab"},
]
description = "Convert NanoVer .traj/.state recordings to newer .nanover.zip recordings"
requires-python = ">=3.11"
dependencies = [
    "openmm",
    "MDAnalysis",
    "numpy",
    "grpcio>=1.63.0",
    "grpcio-tools>=1.63.0",
    "aiogrpc",
    "msgpack>=1.0.0",
]
dynamic = ["version"]

[project.scripts]
nanover-convert-recording = "nanover.grpc.convert_cli:main"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["nanover.*"]  # package names should match these glob patterns (["*"] by default)
